extensions: only close the popup on activation changes if visible

As the widget is shown only once the webcontents has loaded it is possible
to close the popup before it's shown. Ignore activation changes until the
popup is shown.

BUG=867654
TEST=covered by tests in mash

Change-Id: I74956b137a119f2b745a52698cb9dee6543b85e4
Reviewed-on: https://chromium-review.googlesource.com/1169525
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581924}
Former-commit-id: a985282e71b5bb45048538d83e3e0591da5f123c